// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUpdatePayload published comic adding new cells should include an item in payload.cells that represents the new cell 1`] = `
Array [
  Object {
    "caption": "another caption!!!",
    "previousCellUrlId": "publishedCellUrlId",
    "studioState": Object {
      "caption": "another caption!!!",
    },
    "urlId": "abCDefGHi",
  },
]
`;

exports[`createUpdatePayload published comic update existing cell without new image should include an item in payload.cells that represents the new cell 1`] = `Array []`;

exports[`createUpdatePayload unpublished comic should add all cells from the passed comic to the payload 1`] = `
Array [
  Object {
    "caption": "some caption!!!",
    "previousCellUrlId": null,
    "studioState": Object {
      "caption": "some caption!!!",
    },
    "urlId": "ffHbrqSDXx",
  },
  Object {
    "caption": "some caption!!!",
    "previousCellUrlId": "ffHbrqSDXx",
    "studioState": Object {
      "caption": "some caption!!!",
    },
    "urlId": "abCDefGHi",
  },
]
`;

exports[`createUpdatePayload unpublished comic should set \`initialCellId\` to the first cell in the passed comic 1`] = `"ffHbrqSDXx"`;
